# nowcasting_pe

./: .gitignore  README.md  paper.txt  pyproject.toml
docs/plans/: 2026-02-14-nowcasting-pe-nav-design.md  2026-02-14-nowcasting-pe-nav-implementation.md
notebooks/: nowcasting_pe_nav.ipynb
src/: __init__.py  estimation.py  garch.py  kalman.py  metrics.py  naive.py  simulation.py  ssm.py  visualization.py
