[project]
name = "nowcasting-pe"
version = "0.1.0"
description = "Pedagogical implementation of Brown, Ghysels, Gredil (RFS 2023) — Nowcasting PE NAVs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "arch>=7.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]
